--- a/Market/app/src/main/res/values/styles.xml
+++ b/Market/app/src/main/res/values/styles.xml
@@ -7,4 +7,6 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="FragmentScenarioEmptyFragmentActivityTheme"></style>
+
 </resources>
