--- a/Market/app/src/main/res/layout/fragment_add_shopping_item.xml
+++ b/Market/app/src/main/res/layout/fragment_add_shopping_item.xml
@@ -76,8 +76,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:text="@string/add"
+        android:layout_marginRight="16dp"
+        android:text="Add"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
